--- a/.github/workflows/sync_leetcode.yml
+++ b/.github/workflows/sync_leetcode.yml
@@ -16,4 +16,5 @@ jobs:
           github-token: ${{ github.token }}
           leetcode-csrf-token: ${{ secrets.LEETCODE_CSRF_TOKEN }}
           leetcode-session: ${{ secrets.LEETCODE_SESSION }}
-          filter-duplicate-secs: 86400
+          filter-duplicate-secs: 10
+          destination-folder : LeetCode
